JVM 补充